--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+assets/3D_Toothmodel.mp4
+assets/3D_Toothmodel_Pointcloud.mp4
+dev/
+src/dummy.py
+theory/
